# claw-my-ltspice

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prebuilt  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  claw-spice  docker-compose.prebuilt.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  model_request.yml  simulation_help.yml
.github/workflows/: ci.yml  examples.yml  ltspice-smoke.yml  pages.yml  render.yml  simulate.yml
.opencode/: opencode.json
.opencode/agent/: circuit-design-reviewer.md  ltspice-sim-engineer.md  repo-maintainer.md  schematic-generator.md  simulation-debugger.md  spice-model-librarian.md
docker/: entrypoint.sh  ltspice
docs-site/: mkdocs.yml
docs-site/pages/: ai-instructions.md  code-to-schematic.md  command-reference.md  docker.md  engineering-workflow.md  example-opamps.md  example-precision-rectifier.md  example-rc-step.md  example-sallen-key-lowpass.md  example-schmitt-triggers.md  examples.md  gallery.md  github-actions.md  index.md  model-policy.md  opencode.md  quick-start.md  schematic-rendering.md  signal-plots.md  simulation-analysis.md  theory-to-examples.md  troubleshooting.md
examples/: sample-runs.toml
models/: README.md  manifest.toml
tests/: test_cli.py  test_docker_setup.py  test_docs_assets.py  test_examples.py  test_github_assets.py  test_ir.py  test_logs.py  test_mlp_example.py  test_opencode_assets.py  test_plot.py  test_raw.py  test_render.py  test_schmitt_examples.py  test_simulate.py
(+107 files in other folders)
