[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-spice"
version = "0.1.0"
description = "Docker-first OpenCode-assisted LTspice automation and schematic rendering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jean Reinhold" }]
keywords = [
  "ltspice",
  "spice",
  "docker",
  "opencode",
  "circuit-simulation",
  "schematic",
  "electronics",
]
dependencies = []

[project.optional-dependencies]
runtime = [
  "PyLTSpice>=5.4",
  "spicelib>=1.4",
  "ltspice-to-svg>=0.2.0",
  "matplotlib>=3.8",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocs>=1.6",
]
dev = [
  "ruff>=0.8",
  "pytest>=8.0",
]

[project.scripts]
claw-spice = "claw_spice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claw_spice = ["symbols/*.asy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
